// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ProductCard should get price from getPrice 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Really Good Name
      </h2>
      <div
        class="product-card__description"
      >
        Good Description
      </div>
      <h1
        class="product-card__price"
      >
        42142 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test ProductCard should render 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Really Good Name
      </h2>
      <div
        class="product-card__description"
      >
        Good Description
      </div>
      <h1
        class="product-card__price"
      />
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
    <img
      alt="Really Good Name"
      class="product-card__image"
      src="/lamp.png"
    />
  </div>
</DocumentFragment>
`;
